k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esme-app
  namespace: esme-tp-diascosta
spec:
  replicas: 3
  selector:
    matchLabels:
      app: esme-app
  template:
    metadata:
      labels:
        app: esme-app
    spec:
      containers:
      - name: esme-app
        image: thomasdcosta/esme-app:v1.0
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
