k8s/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: esme-app-clusterip
  namespace: esme-tp-diascosta
spec:
  selector:
    app: esme-app
  ports:
    - protocol: TCP
      port: 80       # port interne du service
      targetPort: 3000  # port du conteneur Node.js
  type: ClusterIP
