k8s/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: esme-app-lb
  namespace: esme-tp-diascosta
spec:
  selector:
    app: esme-app
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 3000  
  type: LoadBalancer
